app/styles/templates/_index.scss
.start_page {
  h1 {
    text-align: center;
    margin-top: 12rem !important;
  }
}

.footer {
  background-color: $dark-blue;
  position: fixed;
  bottom: 0;
  width: 100%;
  border-top: 1px solid;
  padding-top: 0.7rem;

  .navigation_menus {
    position: relative;

    .small-block-grid-5 {
      li:not(:last-child) {
        width: 22%;
      }

      li:last-child {
        width: 10%;
      }
    }

    li {
      text-align: center;
      cursor: pointer;

      i {
        display: block;
        font-size: 1.5rem;
        margin-bottom: 0.3rem;
      }
    }
  }
}

.absolute_footer {
  position: absolute;
  bottom: auto;
}

